@@ -758,6 +758,10 @@ Release 0.19.0 - Unreleased
     HADOOP-4280. Fix conversions between seconds in C and milliseconds in 
     Java for access times for files. (Pete Wyckoff via rangadi)
 
+    HADOOP-4254. -setSpaceQuota command does not convert "TB" extenstion to
+    terabytes properly. Implementation now uses StringUtils for parsing this.
+    (Raghu Angadi)
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
